--- a/SalesWebMcv/Views/Sellers/Edit.cshtml
+++ b/SalesWebMcv/Views/Sellers/Edit.cshtml
@@ -10,8 +10,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            @*<div asp-validation-summary="All" class="text-danger"></div>*@
+        <form asp-action="Edit">
+            <input asp-for="Seller.Id" class="hidden">
             <div class="form-group">
                 <label asp-for="Seller.Name" class="control-label"></label>
                 <input asp-for="Seller.Name" class="form-control">
@@ -37,11 +37,12 @@
                 <select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments,"Id", "Name"))" class="form-control"></select>
             </div>
             <div class="form-group">
-                <input type="submit" class="btn btn-default" value="Create" />
+                <input type="submit" class="btn btn-default" value="Save" />
             </div>
         </form>
     </div>
 </div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
